# CNN-Articles-Fastapi-Celery

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  startup.sh
app/: __init__.py  database.py
app/models/: model.py
app/services/: cosine_similarity.py  data_service.py  similar_articles.py  text_analysis.py  utils.py
tests/: test_data_service.py  test_database.py  test_text_analysis.py
